# artix_web_app

./: .env  Cargo.toml  package-lock.json  rust_react_web_app.code-workspace  state.json
css/: base.css
scripts/: V2_wait_for_database.ps1  wait_for_database.sh
src/: database.rs  jwt.rs  main.rs
src/json_serialization/: to_do_items.rs
src/models/item/: new_item.rs
src/to_do/: enums.rs  mod.rs
src/to_do/structs/: base.rs
src/to_do/traits/: mod.rs
src/views/: mod.rs
src/views/app/: content_loader.rs  items.rs  mod.rs
src/views/to_do/: delete.rs  mod.rs
templates/: main.html
templates/components/: CreateToDoItem.js  header.css
