[package]
name = "artix_web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
async-std = "1.12.0"
# futures = "0.3.29"
tokio = { version = "1.17", features = ["full"] }
serde_json = "1.0.59"
serde = { version = "1.0.136", features = ["derive"] }
actix-service = "2.0.2"
futures = "0.3.29"
actix-cors = "0.6.4"
diesel = { version = "2.1.0", features = ["postgres","chrono", 
                                          "r2d2"] }
# dotenvy = "0.15.1"
dotenv = "0.15.0"
chrono = "0.4.31"
